# cryptobot

./: .gitignore  README.md  main.py  pyproject.toml
crypto/: ethereumBuySellRobot.py  ethereumForecast.py  redeneural.py
