[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Matheus Cardoso <matheus.cardoso@enline-transmission.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
pandas = "^1.5.3"
python-binance = "^1.0.17"
python-dotenv = "^1.0.0"
matplotlib = "^3.7.1"
pystan = "^3.6.0"
numpy = "^1.24.2"
prophet = "^1.1.2"
flake8 = "^6.0.0"
pep8 = "^1.7.1"
statsmodels = "^0.13.5"

[[tool.poetry.source]]
name = "stanfordnlp"
url = "https://stanfordnlp.github.io/stanfordnlp_pytorch/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[pycodestyle]
max_line_length = 120
ignore = "E203, E266, E501, W503, F403, F401"

